// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualSchema.vue > renders preview schema when enabled and available 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Set2"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon"
              data-v-fb014c00=""
              node-type="aura-nodes-base.set"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Set2
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="extra-info"
              data-v-fb014c00=""
            >
              Preview
            </div>
          </div>
          <div
            class="notice"
            data-test-id="schema-preview-warning"
            data-v-fb014c00=""
          >

            Usually outputs the following fields.

            <button
              bold=""
              data-v-fb014c00=""
              size="small"
            >

              Execute the node

            </button>

             to see the actual ones.

            <button
              bold=""
              data-v-fb014c00=""
              size="small"
              to="https://docs.aura.io/data/schema-preview/"
            >

              Learn more

            </button>


          </div>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill pill--preview"
            data-depth="1"
            data-name="account"
            data-nest-level="1"
            data-node-name="Set2"
            data-node-type="aura-nodes-base.set"
            data-path=".account"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.account }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                account
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill pill--preview"
            data-depth="1"
            data-name="id"
            data-nest-level="2"
            data-node-name="Set2"
            data-node-type="aura-nodes-base.set"
            data-path=".account.id"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.account.id }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                id
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->

            </span>

          </span>
        </div>





        <aura-icon-stub
          class="icon el-tooltip__trigger el-tooltip__trigger"
          data-v-414a3fc7=""
          icon="ellipsis"
          size="small"
          spin="false"
        />
        <!--teleport start-->
        <!--teleport end-->





        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="variables"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon collapsed"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <!--v-if-->
            <div
              class="title"
              data-v-fb014c00=""
            >
              Variables and context
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`VirtualSchema.vue > renders previous nodes schema for AI tools 1`] = `
<div
  class="schema-header"
  data-test-id="run-data-schema-header"
  data-v-fb014c00=""
>
  <div
    class="toggle"
    data-v-fb014c00=""
  >
    <aura-icon-stub
      class="collapse-icon"
      data-v-fb014c00=""
      icon="chevron-down"
      size="medium"
      spin="false"
    />
  </div>
  <node-icon-stub
    class="icon"
    data-v-fb014c00=""
    node-type="aura-nodes-base.if"
    size="12"
  />
  <div
    class="title"
    data-v-fb014c00=""
  >
    If
    <!--v-if-->
  </div>
  <!--v-if-->
  <div
    class="extra-info"
    data-test-id="run-data-schema-node-item-count"
    data-v-fb014c00=""
  >
    2 items
  </div>
</div>
`;

exports[`VirtualSchema.vue > renders schema for empty objects and arrays 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Manual Trigger"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon icon-trigger"
              data-v-fb014c00=""
              node-type="aura-nodes-base.manualTrigger"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Manual Trigger
              <!--v-if-->
            </div>
            <aura-icon-stub
              class="trigger-icon"
              data-v-fb014c00=""
              icon="bolt-filled"
              size="xsmall"
              spin="false"
            />
            <div
              class="extra-info"
              data-test-id="run-data-schema-node-item-count"
              data-v-fb014c00=""
            >
              1 item
            </div>
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="empty"
            data-nest-level="1"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".empty"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.empty }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                empty
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="emptyArray"
            data-nest-level="1"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".emptyArray"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.emptyArray }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="list"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                emptyArray
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="nested"
            data-nest-level="1"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".nested"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.nested }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="list"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                nested
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="nested[0]"
            data-nest-level="2"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".nested[0]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.nested[0] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                nested[0]
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="empty"
            data-nest-level="3"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".nested[0].empty"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.nested[0].empty }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                empty
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="emptyArray"
            data-nest-level="3"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".nested[0].emptyArray"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.nested[0].emptyArray }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="list"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                emptyArray
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="variables"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon collapsed"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <!--v-if-->
            <div
              class="title"
              data-v-fb014c00=""
            >
              Variables and context
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`VirtualSchema.vue > renders schema in output pane 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="name"
            data-nest-level="0"
            data-path=".name"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ name }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                name
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              John
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="age"
            data-nest-level="0"
            data-path=".age"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ age }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="hash"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                age
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              22
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies"
            data-nest-level="0"
            data-path=".hobbies"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ hobbies }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="list"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                hobbies
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies[0]"
            data-nest-level="1"
            data-path=".hobbies[0]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ hobbies[0] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                hobbies[0]
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              surfing
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="0"
            data-name="hobbies[1]"
            data-nest-level="1"
            data-path=".hobbies[1]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ hobbies[1] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                hobbies[1]
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              traveling
            </span>

          </span>
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`VirtualSchema.vue > renders schema with spaces and dots 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Manual Trigger"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon icon-trigger"
              data-v-fb014c00=""
              node-type="aura-nodes-base.manualTrigger"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Manual Trigger
              <!--v-if-->
            </div>
            <aura-icon-stub
              class="trigger-icon"
              data-v-fb014c00=""
              icon="bolt-filled"
              size="xsmall"
              spin="false"
            />
            <div
              class="extra-info"
              data-test-id="run-data-schema-node-item-count"
              data-v-fb014c00=""
            >
              1 item
            </div>
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="hello world"
            data-nest-level="1"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path="['hello world']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json['hello world'] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="list"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                hello world
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="hello world[0]"
            data-nest-level="2"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path="['hello world'][0]"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json['hello world'][0] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                hello world[0]
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="test"
            data-nest-level="3"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path="['hello world'][0].test"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json['hello world'][0].test }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                test
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="more to think about"
            data-nest-level="4"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path="['hello world'][0].test['more to think about']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json['hello world'][0].test['more to think about'] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="hash"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                more to think about
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              1
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="test.how"
            data-nest-level="3"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path="['hello world'][0]['test.how']"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json['hello world'][0]['test.how'] }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                test.how
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              ignore
            </span>

          </span>
        </div>




        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Set2"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon collapsed"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon"
              data-v-fb014c00=""
              node-type="aura-nodes-base.set"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Set2
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="variables"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon collapsed"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <!--v-if-->
            <div
              class="title"
              data-v-fb014c00=""
            >
              Variables and context
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`VirtualSchema.vue > renders variables and context section 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Manual Trigger"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon collapsed"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon icon-trigger"
              data-v-fb014c00=""
              node-type="aura-nodes-base.manualTrigger"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Manual Trigger
              <!--v-if-->
            </div>
            <aura-icon-stub
              class="trigger-icon"
              data-v-fb014c00=""
              icon="bolt-filled"
              size="xsmall"
              spin="false"
            />
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="variables"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <!--v-if-->
            <div
              class="title"
              data-v-fb014c00=""
            >
              Variables and context
              <!--v-if-->
            </div>
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="$now"
            data-nest-level="1"
            data-path=".$now"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $now }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                $now
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              2025-01-01T00:00:00.000+00:00
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="$today"
            data-nest-level="1"
            data-path=".$today"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $today }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                $today
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              2025-01-01T00:00:00.000+00:00
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill pill--locked"
            data-depth="1"
            data-name="$vars"
            data-nest-level="1"
            data-path=".$vars"
            data-target="false"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $vars }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                $vars
              </span>

            </span>
          </div>

          <aura-icon-stub
            class="locked-icon el-tooltip__trigger el-tooltip__trigger"
            data-v-a135e02d=""
            icon="lock"
            size="small"
            spin="false"
          />
          <!--teleport start-->
          <!--teleport end-->

          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="$execution"
            data-nest-level="1"
            data-path=".$execution"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $execution }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                $execution
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="id"
            data-nest-level="2"
            data-path=".$execution.id"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $execution.id }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                id
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              [filled at execution time]
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="mode"
            data-nest-level="2"
            data-path=".$execution.mode"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $execution.mode }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                mode
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              test
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="resumeUrl"
            data-nest-level="2"
            data-path=".$execution.resumeUrl"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $execution.resumeUrl }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                resumeUrl
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              The URL for resuming a 'Wait' node
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <div
              class="toggle"
              data-v-a135e02d=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-a135e02d=""
                icon="chevron-down"
                spin="false"
              />
            </div>
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="$workflow"
            data-nest-level="1"
            data-path=".$workflow"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $workflow }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="box"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                $workflow
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >
            <span />
          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="id"
            data-nest-level="2"
            data-path=".$workflow.id"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $workflow.id }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                id
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              123
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="name"
            data-nest-level="2"
            data-path=".$workflow.name"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $workflow.name }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                name
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              Test Workflow
            </span>

          </span>
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="active"
            data-nest-level="2"
            data-path=".$workflow.active"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $workflow.active }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="square-check"
              size="small"
              spin="false"
            />
            <span
              class="content title"
              data-v-a135e02d=""
            >

              <span>
                <!--v-if-->
                active
              </span>

            </span>
          </div>
          <!--v-if-->
          <span
            class="content text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >

            <span>
              <!--v-if-->
              true
            </span>

          </span>
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;

exports[`VirtualSchema.vue > should expand all nodes when searching 1`] = `
<div>
  <div
    class="run-data-schema full-height"
    data-v-414a3fc7=""
  >
    <!--v-if-->
    <div
      class="full-height"
      data-test-id="draggable"
      data-v-414a3fc7=""
    >

      <div
        class="full-height scroller"
        data-v-414a3fc7=""
        min-item-size="38"
      >



        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Manual Trigger"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon icon-trigger"
              data-v-fb014c00=""
              node-type="aura-nodes-base.manualTrigger"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Manual Trigger
              <!--v-if-->
            </div>
            <aura-icon-stub
              class="trigger-icon"
              data-v-fb014c00=""
              icon="bolt-filled"
              size="xsmall"
              spin="false"
            />
            <div
              class="extra-info"
              data-test-id="run-data-schema-node-item-count"
              data-v-fb014c00=""
            >
              1 item
            </div>
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="1"
            data-name="name"
            data-nest-level="1"
            data-node-name="Manual Trigger"
            data-node-type="aura-nodes-base.manualTrigger"
            data-path=".name"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $json.name }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="title"
              data-v-a135e02d=""
            >


              <span>
                name
              </span>


            </span>
          </div>
          <!--v-if-->
          <span
            class="text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >


            <mark>
              John
            </mark>


          </span>
        </div>




        <div
          class="schema-header-wrapper"
          data-v-414a3fc7=""
          data-v-fb014c00=""
          id="Set2"
          type="header"
        >
          <div
            class="schema-header"
            data-test-id="run-data-schema-header"
            data-v-fb014c00=""
          >
            <div
              class="toggle"
              data-v-fb014c00=""
            >
              <aura-icon-stub
                class="collapse-icon"
                data-v-fb014c00=""
                icon="chevron-down"
                size="medium"
                spin="false"
              />
            </div>
            <node-icon-stub
              class="icon"
              data-v-fb014c00=""
              node-type="aura-nodes-base.set"
              size="12"
            />
            <div
              class="title"
              data-v-fb014c00=""
            >
              Set2
              <!--v-if-->
            </div>
            <!--v-if-->
            <div
              class="extra-info"
              data-test-id="run-data-schema-node-item-count"
              data-v-fb014c00=""
            >
              1 item
            </div>
          </div>
          <!--v-if-->
        </div>




        <div
          class="schema-item draggable"
          data-test-id="run-data-schema-item"
          data-v-414a3fc7=""
          data-v-a135e02d=""
          type="item"
        >
          <div
            class="toggle-container"
            data-v-a135e02d=""
          >
            <!--v-if-->
          </div>
          <div
            class="pill"
            data-depth="2"
            data-name="name"
            data-nest-level="1"
            data-node-name="Set2"
            data-node-type="aura-nodes-base.set"
            data-path=".name"
            data-target="mappable"
            data-test-id="run-data-schema-node-name"
            data-v-a135e02d=""
            data-value="{{ $('Set2').item.json.name }}"
          >
            <aura-icon-stub
              class="type-icon"
              data-v-a135e02d=""
              icon="type"
              size="small"
              spin="false"
            />
            <span
              class="title"
              data-v-a135e02d=""
            >


              <span>
                name
              </span>


            </span>
          </div>
          <!--v-if-->
          <span
            class="text"
            data-test-id="run-data-schema-item-value"
            data-v-a135e02d=""
          >


            <mark>
              John
            </mark>


          </span>
        </div>



      </div>

      <!--teleport start-->
      <!--teleport end-->
    </div>
  </div>
</div>
`;
